--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.5.0",
+    "@prisma/client": "^5.6.0",
     "next": "^12.3.4",
     "next-auth": "^4.24.5",
     "react": "17.0.2",
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
-    "prisma": "^5.5.0",
-    "typescript": "4.5.5"
+    "prisma": "^5.6.0",
+    "typescript": "^5.2.2"
   }
 }
